@@ -441,9 +441,9 @@ function ItemAuditor:UpdateCraftingTable()
 					link = itemLink,
 					name = itemName,
 					count = count,
-					price = (self:GetAuctionPrice(itemLink) or 0),
+					price = price,
 					cost = totalCost,
-					profit = (self:GetAuctionPrice(itemLink) or 0) - totalCost,
+					profit = price - totalCost,
 					reagents = reagents,
 					count = count,
 					tradeSkillIndex = i,
@@ -459,6 +459,9 @@ function ItemAuditor:UpdateCraftingTable()
 				if data.queue > 0 then
 					data.queue = max(0, data.queue - count)
 				end
+
+				local price = (self:GetAuctionPrice(itemLink) or 0)
+				totalCost  = totalCost + (price * ItemAuditor:GetAHCut())
 				
 				-- If a tradeskill makes 5 at a time and something asks for 9, we should only 
 				-- craft twice to get 10.
