@@ -1,3 +1,7 @@
+2010-08-30  Asa Ayers  <Asa.Ayers@Gmail.com>
+
+- Updated Total Cost in /ia crafting to include the AH cut based on the price column. This will also reduce the profit column to consider the additional cost.
+
 2010-08-27  Asa Ayers  <Asa.Ayers@Gmail.com>
 
 - Added an option to enable the COD warning under /ia options > Messages > COD Warning. This is on by default.
